force-app/main/default/objects/SmarterPay_Direct_Debit_Settings__c/SmarterPay_Direct_Debit_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SmarterPay Direct Debit Settings</label>
</CustomObject>