force-app/main/default/objects/SmarterPay_Direct_Debit_Settings__c/fields/Bank_Account_Checker_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Checker_Endpoint__c</fullName>
    <label>Bank Account Checker Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>