force-app/main/default/objects/SmarterPay_Direct_Debit_Settings__c/fields/Calculate_Next_Collection_Date_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Next_Collection_Date_Endpoint__c</fullName>
    <label>Calculate Next Collection Date Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>